style/refactor: Fixed styling issue with splash page when viewed on smaller devices

--- a/client/src/css/SplashPage.css
+++ b/client/src/css/SplashPage.css
@@ -12,7 +12,14 @@
     font-size: 15px;
   }
 
+  .sp-phrase {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
   .SplashPage {
-    padding-top: 40px;
+    display: block !important;
+    height: fit-content !important;
+    margin-bottom: 20px !important;
   }
 }
